# src/config/swagger.yaml
@@ -90,3 +90,21 @@ paths:
                 type: array
                 items:
                   type: string
+  /verify:
+    post:
+      tags:
+        - Users  
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+              type: 'object'
+              properties:
+                  hash:
+                    type: string 
+            example:
+              hash: 45c8866eea81385afa7074306c9e7aed670cbe3c638aefd42ad0689a7b3294e0aa48d44536dd2f2f2fac669480ec41df
+      responses:
+        '200':
+          description: email verified
